refactor: remove unused test files, introduce `LoggingAspect` for method-level logging across layers, and streamline services and filters with concise improvements
Took 1 hour 39 minutes